2006-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* DoubleTest.cs : added ParseEmptyString().

2006-03-12  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add test for #74947.

2006-02-18  Raja R Harinath  <harinath@gmail.com>

	* TypeTest.cs (ByrefType): New.

2006-02-17  Raja R Harinath  <rharinath@novell.com>

	* TypeTest.cs: Rename one of the instances of Foo<T> to ComFoo<T>.

2006-02-14  Ankit Jain  <jankit@novell.com>

	* ArraySegmentTest.cs: Fix a misplaced #endif.

2006-02-14  Ankit Jain  <jankit@novell.com>
	    Raja R Harinath  <rharinath@novell.com>

	* ArraySegmentTest.cs: New.

2006-02-02  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add test for getting custom attributes of generic
	instances.

2006-01-31  Atsushi Enomoto  <atsushi@ximian.com>

	* StringTest.cs : Added test for bug #77412.

2006-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* StringTest.cs : numbered some assertions.

2006-01-19  Atsushi Enomoto  <atsushi@ximian.com>

	* ModuleHandleTest.cs : GetPEKind() is not public in 2.0 RTM.

2006-01-03  Zoltan Varga  <vargaz@gmail.com>

	* ActivatorTest.cs: Add Nullable tests.

2006-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ActivatorTest.cs: Added new test cases for bug #71300 and for some
	specific types that cannot be created using Activator.
	* TypeTest.cs: Added new test cases for bug #71300.

2006-01-02  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add Nullable tests.

2005-12-26  Zoltan Varga  <vargaz@gmail.com>

	* TimeZoneTest.cs: Fix CET tests.

2005-12-23  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* TimeZoneTest.cs: Added test cases for serialization interop.

2005-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DecimalTest.cs: Re-enabled Single rounding tests (which had nothing
	to do with bug #60227). The problems were in the string output of the
	float - which was then used to parse the decimal.

2005-12-22  Raja R Harinath  <rharinath@novell.com>
